--- a/frontend/nginx.prod.conf
+++ b/frontend/nginx.prod.conf
@@ -1,19 +1,14 @@
 server {
     listen 80;
     server_name localhost;
-    
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self'; connect-src 'self' ws: wss:; frame-ancestors 'none';" always;
-    
-    # Gzip compression
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Enhanced Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_comp_level 6;
     gzip_types
         text/plain
         text/css
@@ -21,16 +16,49 @@ server {
         text/javascript
         application/javascript
         application/xml+rss
-        application/json;
-    
+        application/json
+        application/xml
+        image/svg+xml
+        application/x-font-ttf
+        application/vnd.ms-fontobject
+        font/opentype;
+
+    # Brotli compression would be available with nginx-module-brotli
+    # brotli on;
+    # brotli_comp_level 6;
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' ws: wss:;" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
+    # Remove server signature
+    server_tokens off;
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        access_log off;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
     }
-    
-    # API proxy
+
+    # Handle client-side routing
+    location / {
+        try_files $uri $uri/ /index.html;
+        
+        # Cache HTML files for a short time
+        location ~* \.html$ {
+            expires 5m;
+            add_header Cache-Control "public, no-cache";
+        }
+    }
+
+    # API proxy with enhanced security
     location /api/ {
         proxy_pass http://backend:80/api/;
         proxy_http_version 1.1;
@@ -41,47 +69,35 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        
+        # Security headers for API requests
+        proxy_hide_header X-Powered-By;
+        proxy_set_header X-Content-Type-Options "nosniff";
+        proxy_set_header X-Frame-Options "SAMEORIGIN";
+        
+        # Timeouts
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
-    
-    # SignalR hub proxy
-    location /hubs/ {
-        proxy_pass http://backend:80/hubs/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-    }
-    
+
     # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
-    
-    # Serve React app
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-        
-        # Cache HTML files for short time
-        location ~* \.html$ {
-            expires 5m;
-            add_header Cache-Control "no-cache, must-revalidate";
-        }
+
+    # Deny access to sensitive files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
-    
-    # Error pages
-    error_page 404 /index.html;
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+
+    location ~ ~$ {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 }
