--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "build:frontend": "cd frontend && npm run build",
     "setup:test-env": "npm run build:all && npm run start:backend && npm run start:frontend"
   },
-  "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@tanstack/react-query": "^4.29.0",
-    "vitest": "^0.34.0",
-    "selenium-webdriver": "^4.10.0",
-    "chromedriver": "^114.0.0"
-  },
+ "devDependencies": {
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/jest-dom": "^5.16.5",
+  "@testing-library/user-event": "^14.4.3",
+  "@tanstack/react-query": "^4.29.0",
+  "vitest": "^0.34.0",
+  "selenium-webdriver": "^4.10.0",
+  "chromedriver": "^114.0.0",
+  "eslint": "^latest",
+  "@typescript-eslint/eslint-plugin": "^latest",
+  "@typescript-eslint/parser": "^latest",
+  "eslint-config-standard-with-typescript": "^latest"
+},
   "keywords": [
     "integration-testing",
     "web-level-editor",
