--- a/backend/ProceduralMiniGameGenerator.WebAPI/appsettings.json
+++ b/backend/ProceduralMiniGameGenerator.WebAPI/appsettings.json
@@ -30,5 +30,35 @@
   "CorsOrigins": [
     "http://localhost:3000",
     "http://localhost:5173"
-  ]
+  ],
+  "Api": {
+    "CorsOrigins": [ "http://localhost:3000", "http://localhost:5173" ],
+    "MaxBatchSize": 1000,
+    "MaxBatchCountPerVariation": 50,
+    "CacheExpiration": "00:10:00",
+    "CacheSlidingExpiration": "00:02:00",
+    "MaxCacheSizeMB": 100,
+    "JobStatusCacheExpiration": "01:00:00",
+    "BatchJobStatusCacheExpiration": "02:00:00",
+    "BackgroundProcessingTileThreshold": 10000,
+    "BackgroundProcessingEntityThreshold": 1000,
+    "BackgroundProcessingParameterThreshold": 10,
+    "DefaultPreviewDebounceMs": 500,
+    "MaxPreviewDebounceMs": 5000
+  },
+  "Generation": {
+    "MinLevelWidth": 5,
+    "MaxLevelWidth": 200,
+    "MinLevelHeight": 5,
+    "MaxLevelHeight": 200,
+    "MaxEntitiesPerLevel": 10000,
+    "MaxVariationsPerBatch": 20,
+    "MaxValuesPerVariation": 20,
+    "SupportedAlgorithms": [ "perlin", "cellular", "maze", "rooms" ],
+    "SupportedThemes": [ "forest", "desert", "cave", "space", "underwater" ],
+    "SupportedDifficulties": [ "easy", "medium", "hard", "expert" ],
+    "MinPlayerSpeed": 0.1,
+    "MaxPlayerSpeed": 20.0,
+    "MaxTimeLimit": 3600
+  }
 }
