--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,10 +5,18 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["vitest/globals", "node"],
+
+    /* Añadimos aquí react y react-dom */
+    "types": [
+      "react",
+      "react-dom",
+      "vitest/globals",
+      "node",
+      "react-router-dom"
+    ],
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+   "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
